# recoalign

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/baseline/: openai_vit_b32_aro.yaml  openai_vit_b32_bivlc.yaml  openai_vit_b32_flickr30k.yaml  openai_vit_b32_mscoco.yaml  openai_vit_b32_sugarcrepe.yaml  openai_vit_b32_winoground.yaml  openclip_vit_b16_laion2b_aro.yaml  (+12 more)
data/: README.md
docs/: .phase1_1_init  PHASE1_1_MARKER.tmp  architecture.md  baseline_protocol.md  compositional_diagnostics.md  data_preparation.md  experiment_lifecycle.md  reproducibility.md  research_plan.md
environments/: README.md  wsl2-cu126-py310.yml
paper/: README.md
reports/: phase1_baseline_audit.md  phase1_baseline_failures.csv  phase1_baseline_metrics.csv
results/: README.md  example_metrics.json
schemas/: checkpoint_manifest.schema.json  dataset_manifest.schema.json  environment.schema.json  evaluation.schema.json  metrics.schema.json  prediction.schema.json  run.schema.json
scripts/: audit_winoground_run.py  build_results_table.py  check_environment.py  compare_runs.py  export_winoground.py  review_winoground.py  smoke_test_openclip.py
tests/: conftest.py  test_audit_winoground_run.py  test_baseline_evaluation.py  test_check_environment.py  test_chunked_ranking.py  test_compare_runs.py  test_compositional_diagnostics.py  test_compositional_preparation.py  test_config.py  test_data_preparation.py  test_dataset_manifest.py  test_experiment_records.py  test_export_winoground.py  test_extended_benchmarks.py  test_manifest.py  test_repository_hygiene.py  test_result_tables.py  test_retrieval_metrics.py  test_review_winoground.py  test_schema_validation.py
(+65 files in other folders)
