[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recoalign"
version = "0.1.0"
description = "Research infrastructure for region-aware compositional image-text retrieval."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Yangjunjie Lin" }
]
dependencies = [
  "numpy",
  "Pillow",
  "PyYAML",
  "tqdm",
]

[project.optional-dependencies]
openclip = [
  "open_clip_torch",
]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
