[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recoalign"
version = "0.5.0"
description = "Reproducible research infrastructure for compositional image-text retrieval."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Yangjunjie Lin" }
]
license = { text = "Apache-2.0" }
dependencies = [
  "numpy>=1.24",
  "Pillow>=9.0",
  "PyYAML>=6.0",
  "jsonschema>=4.21",
  "tqdm>=4.65",
]

[project.optional-dependencies]
openclip = [
  "open_clip_torch==3.3.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
recoalign = "recoalign.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
